Fixed some ui issue
- Fixed countries list flag covering the search input on hover

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,7 @@ body {
 		top: 0;
 		left: 0;
 		display: flex;
+		z-index: 99;
 		background: $white;
 		border-bottom: 1px solid $dark-200;
 		
